Remove Validation.java and use apache common utils